# screenCap

./: .gitignore  GLCanvas.py  README.md  build.bat  changeLog.md  colorPicker.py  config.ini  dictionIput.py  dpiTest.py  dpiTest.spec  nuitka-crash-report.xml  nuitka_build_info.md  oldCode.py  openGLTesting.py  pilCanvas.py  pilCanvas.spec  pynput.mouse.spec  pyproject.toml  recycle.py  recycler.py  requirements.txt  screenCap.py  screenCap.spec  screenCapExe.spec  screenCapLoose.spec  snapshot.py  stuff.py  stuff.spec  temp.py  tempCodeRunnerFile.py  tempjzslhzmgeh.py  test.config  testing.py  testing.spec  values.py
Archives/QtExperimental/: ConfigManager.py  HotkeyManager.py  canvasTest.py  memoryTest.py  requirements.txt  rightclickMenu.py  todo.txt
Archives/V1/: bread.cur  screenCap.py  screenCap.spec  values.py
QtExperimental/: ConfigManager.py  HotkeyManager.py  HotkeymanagerPynput.py  STUFF.js  canvas.py  config.ini  main.py  main.spec  memoryTest.py  newsnap.py  otherTesting.py  paintToolbar.py  recycler.py  reycler.py  rightclickMenu.py  selectionbox.py  snapshot.py  snapshotMenu.py  test.py  testing2.py  todo.txt  values.py
screencap/debug/: test.py
screencap/legacy/: HotkeyManager.py  canvas.py  main.py  paintToolbar.py  recycler.py  requirements.txt  rightclickMenu.py  selectionbox.py  snapshot.py  snapshotMenu.py  todo.md  values.py
screencap/src/: Config.py  Constant.py  Consts.py  KeyManager.py  config.ini  main.py  paintToolbar.py  selectionbox.py  snapshotMenu.py  utils.py
